--- a/Core_Proje/Views/Default/Index.cshtml
+++ b/Core_Proje/Views/Default/Index.cshtml
@@ -36,7 +36,7 @@
             <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
                 <div class="container-narrow">
                     <div class="text-center mb-5">
-                        <h2 class="marker marker-center">Bana Ulaşın</h2>
+                        <h2 class="marker marker-center">İletişim</h2>
                     </div>
                     <div class="row">
 
