--- a/Core_Proje/Views/Shared/Components/ContactDetails/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/ContactDetails/Default.cshtml
@@ -1,30 +1,37 @@
-﻿<div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
-    <div class="mt-3 px-1">
-        <div class="h5">Let’s talk how I can help you!</div>
-        <p>If you like my work and want to avail my services then drop me a message using the contact form. </p>
-        <p>Or get in touch using my email, skype or my contact number.</p>
-        <p>See you!</p>
-    </div>
-    <div class="mt-53 px-1">
-        <div class="row">
-            <div class="col-sm-2">
-                <div class="pb-1">Email:</div>
-            </div>
-            <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">walter@company.com</div>
-            </div>
-            <div class="col-sm-2">
-                <div class="pb-1">Skype:</div>
-            </div>
-            <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">username@skype.com</div>
-            </div>
-            <div class="col-sm-2">
-                <div class="pb-1">Phone:</div>
-            </div>
-            <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">+0718-111-0011</div>
-            </div>
+﻿@using EntityLayer.Concrete
+@model List<Contact>
+
+
+
+<div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
+    @foreach (var item in Model)
+    {
+
+        <div class="mt-3 px-1">
+            <div class="h5">@item.Title</div>
+            <p>@item.Description </p>
+            <p>Aşağıdaki adresler üzerinden bana mail gönderebilir veya sorularınızı iletebilirsiniz.</p>
+            <p>Görüşmek Üzere!</p>
         </div>
-    </div>
+        <div class="mt-53 px-1">
+
+
+            <div class="row">
+                <div class="col-sm-2">
+                    <div class="pb-1">Mail: </div>
+                </div>
+                <div class="col-sm-10">
+                    <div class="pb-1 fw-bolder">@item.Mail</div>
+                </div>
+
+                <div class="col-sm-2">
+                    <div class="pb-1">Telefon: </div>
+                </div>
+                <div class="col-sm-10">
+                    <div class="pb-1 fw-bolder">@item.Phone</div>
+                </div>
+            </div>
+
+        </div>
+    }
 </div>
