--- a/Core_Proje/Views/Default/Index.cshtml
+++ b/Core_Proje/Views/Default/Index.cshtml
@@ -40,7 +40,9 @@
                     </div>
                     <div class="row">
 
-                        @await Component.InvokeAsync("SendMessage")
+                        @*@await Component.InvokeAsync("SendMessage")*@
+
+                        @await Html.PartialAsync("/Views/Default/SendMessage.cshtml")
 
                         @await Component.InvokeAsync("ContactDetails")
 
