--- a/Core_Proje/Views/Shared/_AdminLayout.cshtml
+++ b/Core_Proje/Views/Shared/_AdminLayout.cshtml
@@ -26,26 +26,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-    <meta name="author" content="Creative Tim">
-    <title>Argon Dashboard - Free Dashboard for Bootstrap 4</title>
-    <!-- Favicon -->
-
-    @*dosya yolunu değiştiriyoruzki tema gelsin*@
-
-    <link rel="icon" href="~/argon-dashboard-master/assets/img/brand/favicon.png" type="image/png">
-    <!-- Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
-    <!-- Icons -->
-    <link rel="stylesheet" href="~/argon-dashboard-master/assets/vendor/nucleo/css/nucleo.css" type="text/css">
-    <link rel="stylesheet" href="~/argon-dashboard-master/assets/vendor/fortawesome/fontawesome-free/css/all.min.css" type="text/css">
-    <!-- Page plugins -->
-    <!-- Argon CSS -->
-    <link rel="stylesheet" href="~/argon-dashboard-master/assets/css/argon.css?v=1.2.0" type="text/css">
-</head>
+@await Html.PartialAsync("/Views/Admin/PartialHead.cshtml")
 
 <body>
     <!-- Sidenav -->
@@ -105,6 +86,7 @@
             <!-- Footer -->
 
             @await Html.PartialAsync("/Views/Admin/PartialFooter.cshtml")
+
         </div>
     </div>
     <!-- Argon Scripts -->
