head duzenlendi yetenek ekle sayfası yetenek ekle butonu aktif edildi

--- a/Core_Proje/Views/Skill/Index.cshtml
+++ b/Core_Proje/Views/Skill/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="card-header border-0 d-flex align-items-center">
     <h3 class="mb-0 mr-auto">Yetenek Listesi Tablosu</h3>
-    <th><a href="#" class="btn btn-success">Yetenek Ekle</a></th>
+    <a href="/Skill/AddSkill" class="btn btn-success">Yetenek Ekle</a>
 </div>
 <!-- Light table -->
 <div class="table-responsive">
