--- a/Core_Proje/Views/Skill/AddSkill.cshtml
+++ b/Core_Proje/Views/Skill/AddSkill.cshtml
@@ -4,20 +4,23 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>AddSkill</h1>
+
 
 @*method kısmı sayfada bir post isteği olduğunda işlemin gerceklesmesini istedigimizi sart kosuyor*@
 
-<br />
+<div class="card-header border-0 d-flex align-items-center">
+<h3 class="mb-0 mr-auto">Yetenek Ekleme Sayfası</h3>
+</div>
 <br />
 <form method="post">
     <div class="form-group">
         <label>Yetenek Başlığı</label>
-        <input type="text" name="Title" class="form-control" placeholder="Yetenek Giriniz"/>
+        <input type="text" name="Title" class="form-control" placeholder="Yetenek Giriniz" />
     </div>
     <div class="form-group">
         <label>İlerleme</label>
-        <input type="text" name="Value" class="form-control"  placeholder="%">
-    </div>    
+        <input type="text" name="Value" class="form-control" placeholder="%">
+    </div>
     <button type="submit" class="btn btn-success">Kaydet</button>
+    <a href="/Skill" class="btn btn-youtube">İptal</a>
 </form>
