yetenek silme aktif edildi. genericrepository deki id ile bulma kod hatası duzeltildi

--- a/Core_Proje/Views/Skill/Index.cshtml
+++ b/Core_Proje/Views/Skill/Index.cshtml
@@ -44,7 +44,7 @@
                                 </div>
                             </div>
                         </div>
-                    <td> <a href="#" class="btn btn-youtube">Sil</a></td>
+                    <td> <a href="/Skill/DeleteSkill/@item.SkillId" class="btn btn-youtube">Sil</a></td>
                     <td> <a href="#" class="btn btn-info">Güncelle</a></td>
 
                 </tr>
