yetenek guncelleme aktif edildi

--- a/Core_Proje/Views/Skill/Index.cshtml
+++ b/Core_Proje/Views/Skill/Index.cshtml
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                     <td> <a href="/Skill/DeleteSkill/@item.SkillId" class="btn btn-youtube">Sil</a></td>
-                    <td> <a href="#" class="btn btn-info">Güncelle</a></td>
+                    <td> <a href="/Skill/EditSkill/@item.SkillId" class="btn btn-info">Güncelle</a></td>
 
                 </tr>
             }
