experience/deneyim sayfasi olusturuldu

--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@using EntityLayer.Concrete
-@model List<Skill>
+@model List<Experience>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
-
 <div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Yetenekler</h3>
-    <a href="/Skill/AddSkill" class="btn btn-success">Yetenek Ekle</a>
+    <h3 class="mb-0 mr-auto">Deneyimler</h3>
+    <a href="/Skill/AddSkill" class="btn btn-success">Deneyim Ekle</a>
 </div>
 <!-- Light table -->
 <div class="table-responsive">
@@ -19,10 +17,10 @@
             <tr>
                 <th scope="col" class="sort" data-sort="name">#</th>
                 <th scope="col" class="sort" data-sort="budget">Başlık</th>
-                <th scope="col" class="sort" data-sort="status">İlerleme</th>
+                <th scope="col" class="sort" data-sort="status">Tarih</th>
                 <th scope="col"></th>
                 <th scope="col" class="sort" data-sort="completion"></th>
-                
+
             </tr>
         </thead>
         <tbody class="list">
@@ -30,22 +28,20 @@
             {
                 <tr>
                     <td>
-                        @item.SkillId
+                        @item.ExperienceId
                     </td>
                     <td class="budget">
-                        @item.Title
+                        @item.Name
                     </td>
                     <td>
                         <div class="d-flex align-items-center">
-                            <span class="completion mr-2">@item.Value%</span>
+                            <span class="completion mr-2">@item.Date</span>
                             <div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="@item.Value" aria-valuemin="0" aria-valuemax="100" style="width: @item.Value%;"></div>
-                                </div>
+                                
                             </div>
                         </div>
-                    <td> <a href="/Skill/DeleteSkill/@item.SkillId" class="btn btn-youtube">Sil</a></td>
-                    <td> <a href="/Skill/EditSkill/@item.SkillId" class="btn btn-info">Güncelle</a></td>
+                    <td> <a href="/Skill/DeleteSkill/@item.ExperienceId" class="btn btn-youtube">Sil</a></td>
+                    <td> <a href="/Skill/EditSkill/@item.ExperienceId" class="btn btn-info">Güncelle</a></td>
 
                 </tr>
             }
@@ -53,4 +49,5 @@
     </table>
 
 </div>
+
 
