deneyim ekleme olusturuldu

--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="card-header border-0 d-flex align-items-center">
     <h3 class="mb-0 mr-auto">Deneyimler</h3>
-    <a href="/Skill/AddSkill" class="btn btn-success">Deneyim Ekle</a>
+    <a href="/Experience/AddExperience" class="btn btn-success">Deneyim Ekle</a>
 </div>
 <!-- Light table -->
 <div class="table-responsive">
