admin panelinde deneyim guncelleme aktif

--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -33,15 +33,13 @@
                     <td class="budget">
                         @item.Name
                     </td>
+                   
                     <td>
                         <div class="d-flex align-items-center">
                             <span class="completion mr-2">@item.Date</span>
-                            <div>
-                                
-                            </div>
                         </div>
-                    <td> <a href="/Skill/DeleteSkill/@item.ExperienceId" class="btn btn-youtube">Sil</a></td>
-                    <td> <a href="/Skill/EditSkill/@item.ExperienceId" class="btn btn-info">Güncelle</a></td>
+                    <td> <a href="/Experience/DeleteExperience/@item.ExperienceId" class="btn btn-youtube">Sil</a></td>
+                    <td> <a href="/Experience/EditExperience/@item.ExperienceId" class="btn btn-info">Güncelle</a></td>
 
                 </tr>
             }
