--- a/Core_Proje/Views/Experience/AddExperience.cshtml
+++ b/Core_Proje/Views/Experience/AddExperience.cshtml
@@ -17,6 +17,14 @@
         <label>Tarih</label>
         <input type="text" name="Date" class="form-control" placeholder="Örn. Veri Tabanı (2021-2023)">
     </div>
+    <div class="form-group">
+        <label>Resim Yolu</label>
+        <input type="text" name="ImageUrl" class="form-control" >
+    </div>
+    <div class="form-group">
+        <label>Açıklama</label>
+        <input type="text" name="Description" class="form-control" placeholder="Kısaca özetleyeniz.">
+    </div>
     <button type="submit" class="btn btn-success">Kaydet</button>
     <a href="/Experience" class="btn btn-youtube">İptal</a>
 </form>
