--- a/Core_Proje/Views/Portfolio/Index.cshtml
+++ b/Core_Proje/Views/Portfolio/Index.cshtml
@@ -20,7 +20,7 @@
                             <th scope="col" class="sort" data-sort="budget">Ücret</th>
                             <th scope="col" class="sort" data-sort="status">Durum</th>
                             <th scope="col">Görseller</th>
-                            <th scope="col" class="sort" data-sort="completion"></th>
+                            <th scope="col" class="sort" data-sort="completion">İlerleme</th>
                             <th scope="col"></th>
                         </tr>
                     </thead>
@@ -39,44 +39,41 @@
                                     </div>
                                 </th>
                                 <td class="budget">
-                                    $2500 USD
+                                    @item.Price
                                 </td>
                                 <td>
                                     <span class="badge badge-dot mr-4">
-                                        <i class="bg-warning"></i>
-                                        <span class="status">pending</span>
+                                        <i class="bg-success"></i>
+                                        <span class="status">Tamamlandı</span>
                                     </span>
                                 </td>
                                 <td>
                                     <div class="avatar-group">
-                                        <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Ryan Tompson">
-                                            <img alt="Image placeholder" src="/argon-dashboard-master/assets/img/theme/team-1.jpg">
+                                        <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" >
+                                            <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-1.jpg">
                                         </a>
                                         <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Romina Hadid">
-                                            <img alt="Image placeholder" src="/argon-dashboard-master/assets/img/theme/team-2.jpg">
+                                            <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-2.jpg">
                                         </a>
                                         <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Alexander Smith">
-                                            <img alt="Image placeholder" src="/argon-dashboard-master/assets/img/theme/team-3.jpg">
+                                            <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-3.jpg">
                                         </a>
                                         <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Jessica Doe">
-                                            <img alt="Image placeholder" src="/argon-dashboard-master/assets/img/theme/team-4.jpg">
+                                            <img alt="Image placeholder" src="~/argon-dashboard-master/assets/img/theme/team-4.jpg">
                                         </a>
                                     </div>
                                 </td>
                                 <td>
-                                </td>
-                                <td class="text-right">
-                                    <div class="dropdown">
-                                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
+                                    <div class="d-flex align-items-center">
+                                        <span class="completion mr-2">@item.Value%</span>
+                                        <div>
+                                            <div class="progress">
+                                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @item.Value%;"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </td>
+                                
                             </tr>
                         }
 
