--- a/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
+++ b/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model EntityLayer.Concrete.Portfolio
 @{
     ViewData["Title"] = "AddPortfolio";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -12,14 +12,17 @@
     <div class="form-group">
         <label>Proje</label>
         <input type="text" name="Name" class="form-control" placeholder="Proje Adı Giriniz" />
+        @Html.ValidationMessageFor(x => x.Name,null, new { @class = "text-danger" })
     </div>
     <div class="form-group">
         <label>Küçük Resim</label>
         <input type="text" name="ImageUrl" class="form-control" placeholder="Cv sayfasında görünecek resim">
+        @Html.ValidationMessageFor(x => x.ImageUrl, null, new { @class = "text-danger" })
     </div>
     <div class="form-group">
         <label>Büyük Resim</label>
-        <input type="text" name="ImageUrl" class="form-control" placeholder="Cv sayfasında tıklanıldığında açılacak resim">
+        <input type="text" name="ImageUrl2" class="form-control" placeholder="Cv sayfasında tıklanıldığında açılacak resim">
+        @Html.ValidationMessageFor(x => x.ImageUrl2, null, new { @class = "text-danger" })
     </div>
     <div class="form-group">
         <label>Proje Adresi</label>
@@ -28,11 +31,13 @@
     <div class="form-group">
         <label>Ücret</label>
         <input type="text" name="Price" class="form-control" placeholder="Projeye ücreti, Örn. $2000 USD">
+        @Html.ValidationMessageFor(x => x.Price, null, new { @class = "text-danger" })
     </div>
     <div class="form-group">
         <label>İlerleme (%)</label>
         <input type="text" name="Value" class="form-control" placeholder="Örn. 65">
-        
+        @Html.ValidationMessageFor(x => x.Value, null, new { @class = "text-danger" })
+
     </div>
 
     <button type="submit" class="btn btn-success">Kaydet</button>
