--- a/Core_Proje/Views/Feature/Index.cshtml
+++ b/Core_Proje/Views/Feature/Index.cshtml
@@ -1,8 +1,32 @@
-﻿
+﻿@model EntityLayer.Concrete.Feature
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Burası Content alanı</h1>
+<div class="card-header border-0 d-flex align-items-center">
+    <h3 class="mb-0 mr-auto">Öne Çıkan Post Düzenleme Sayfası</h3>
+</div>
+<br />
+
+<form method="post">
+    @Html.HiddenFor(model => model.FeatureId) 
+    <div class="form-group">
+        <label>Başlık</label>
+        <input type="text" name="Header" class="form-control" value="@Model.Header" />
+    </div>
+    <div class="form-group">
+        <label>Ad Soyad</label>
+        <input type="text" name="Name" class="form-control" value="@Model.Name">
+    </div>
+    <div class="form-group">
+        <label>Görev</label>
+        <input type="text" name="Title" class="form-control" value="@Model.Title">
+    </div>
+    <button type="submit" class="btn btn-success">Güncelle</button>
+    <a href="/Feature" class="btn btn-youtube">İptal</a>
+</form>
+
+
 
