skill indexi yeni temanin layoutuna bagladik

--- a/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
@@ -371,7 +371,7 @@
                         </nav>
                     </div>
 
-                    @RenderBody();
+                    @RenderBody()
 
                 </div>
                 <!-- content-wrapper ends -->
