--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -3,49 +3,41 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Deneyimler</h3>
-    <a href="/Experience/AddExperience" class="btn btn-success">Deneyim Ekle</a>
-</div>
-<!-- Light table -->
-<div class="table-responsive">
-    <table class="table align-items-center table-flush">
-        <thead class="thead-light">
-            <tr>
-                <th scope="col" class="sort" data-sort="name">#</th>
-                <th scope="col" class="sort" data-sort="budget">Başlık</th>
-                <th scope="col" class="sort" data-sort="status">Tarih</th>
-                <th scope="col"></th>
-                <th scope="col" class="sort" data-sort="completion"></th>
+<div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body d-flex justify-content-between align-items-center">
+            <h4 class="card-title mb-0">Deneyimler</h4>
+            <a href="#" class="btn btn-success">Deneyim Ekle</a>
+        </div>           
 
-            </tr>
-        </thead>
-        <tbody class="list">
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @item.ExperienceId
-                    </td>
-                    <td class="budget">
-                        @item.Name
-                    </td>
-                   
-                    <td>
-                        <div class="d-flex align-items-center">
-                            <span class="completion mr-2">@item.Date</span>
-                        </div>
-                    <td> <a href="/Experience/DeleteExperience/@item.ExperienceId" class="btn btn-youtube">Sil</a></td>
-                    <td> <a href="/Experience/EditExperience/@item.ExperienceId" class="btn btn-info">Güncelle</a></td>
-
-                </tr>
-            }
-        </tbody>
-    </table>
-
-</div>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Başlık</th>
+                            <th>Tarih</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
 
 
+                            <tr>
+
+                                <td>@item.Name</td>
+                                <td>@item.Date</td>
+                                <td><a href="#" class="btn btn-danger">Sil</a></td>
+                                <td><a href="#" class="btn btn-warning">Güncelle</a></td>
+                            </tr>
+
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
