--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="card">
         <div class="card-body d-flex justify-content-between align-items-center">
             <h4 class="card-title mb-0">Deneyimler</h4>
-            <a href="#" class="btn btn-success">Deneyim Ekle</a>
+            <a href="/Experience/AddExperience" class="btn btn-success">Deneyim Ekle</a>
         </div>           
 
             <div class="table-responsive">
