deneyim guncelleme sayfasi yeni temaya uyarlandi ve butonlar aktif edildi

--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -31,8 +31,8 @@
 
                                 <td>@item.Name</td>
                                 <td>@item.Date</td>
-                                <td><a href="#" class="btn btn-danger">Sil</a></td>
-                                <td><a href="#" class="btn btn-warning">Güncelle</a></td>
+                                <td><a href="/Experience/DeleteExperience/@item.ExperienceId" class="btn btn-danger">Sil</a></td>
+                                <td><a href="/Experience/EditExperience/@item.ExperienceId" class="btn btn-warning">Güncelle</a></td>
                             </tr>
 
                         }
