--- a/Core_Proje/Views/Experience/EditExperience.cshtml
+++ b/Core_Proje/Views/Experience/EditExperience.cshtml
@@ -2,32 +2,43 @@
 
 @{
     ViewData["Title"] = "EditExperience";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Deneyim Güncelleme</h3>
-</div>
-<br />
-
 <form method="post">
-    @Html.HiddenFor(model => model.ExperienceId)
-    <div class="form-group">
-        <label>Deneyim</label>
-        <input type="text" name="Name" class="form-control" value="@Model.Name" />
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Deneyim Güncelleme</h4>
+                <form class="forms-sample">
+
+                    @Html.HiddenFor(model => model.ExperienceId)
+
+                    <div class="form-group">
+                        <label for="exampleInputName1">Başlık</label>
+                        <input type="text" class="form-control" name="Name" value="@Model.Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail3">Tarih</label>
+                        <input type="text" class="form-control" name="Date" value="@Model.Date">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword4">Resim Yolu</label>
+                        <input type="text" class="form-control" name="ImageUrl" value="@Model.ImageUrl">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleSelectGender">Açıklama</label>
+                        <input type="text" class="form-control" name="Description" value="@Model.Description">
+
+                    </div>
+
+                    <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
+                    <button href="/Experience" class="btn btn-dark">İptal</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Tarih</label>
-        <input type="text" name="Date" class="form-control" value="@Model.Date">
-    </div>
-    <div class="form-group">
-        <label>Resim Yolu</label>
-        <input type="text" name="ImageUrl" class="form-control" value="@Model.ImageUrl">
-    </div>
-    <div class="form-group">
-        <label>Açıklama</label>
-        <input type="text" name="Description" class="form-control" value="@Model.Description">
-    </div>
-    <button type="submit" class="btn btn-success">Güncelle</button>
-    <a href="/Experience" class="btn btn-youtube">İptal</a>
+
 </form>
+
+
