--- a/Core_Proje/Views/Experience/EditExperience.cshtml
+++ b/Core_Proje/Views/Experience/EditExperience.cshtml
@@ -5,12 +5,12 @@
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<form method="post">
+
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Deneyim Güncelleme</h4>
-                <form class="forms-sample">
+                <form class="forms-sample" method="post">
 
                     @Html.HiddenFor(model => model.ExperienceId)
 
@@ -39,6 +39,6 @@
         </div>
     </div>
 
-</form>
+
 
 
