--- a/Core_Proje/Views/Feature/Index.cshtml
+++ b/Core_Proje/Views/Feature/Index.cshtml
@@ -2,31 +2,35 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Öne Çıkan Post Düzenleme Sayfası</h3>
+
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Öne Çıkan Post Düzenleme Sayfası</h4>
+            <form class="forms-sample" method="post">
+
+                @Html.HiddenFor(model => model.FeatureId)
+                 
+                <div class="form-group">
+                    <label for="exampleInputName1">Başlık</label>
+                    <input type="text" class="form-control" name="Header" value="@Model.Header">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Ad Soyad</label>
+                    <input type="text" class="form-control" name="Name" value="@Model.Name">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Görev</label>
+                    <input type="text" class="form-control" name="Title" value="@Model.Title">
+                </div>
+                <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
+                <button href="/Feature" class="btn btn-dark">İptal</button>
+            </form>
+        </div>
+    </div>
 </div>
-<br />
-
-<form method="post">
-    @Html.HiddenFor(model => model.FeatureId) 
-    <div class="form-group">
-        <label>Başlık</label>
-        <input type="text" name="Header" class="form-control" value="@Model.Header" />
-    </div>
-    <div class="form-group">
-        <label>Ad Soyad</label>
-        <input type="text" name="Name" class="form-control" value="@Model.Name">
-    </div>
-    <div class="form-group">
-        <label>Görev</label>
-        <input type="text" name="Title" class="form-control" value="@Model.Title">
-    </div>
-    <button type="submit" class="btn btn-success">Güncelle</button>
-    <a href="/Feature" class="btn btn-youtube">İptal</a>
-</form>
-
 
 
