yetenek ekleme sayafasi yeni temaya uyarlandi

--- a/Core_Proje/Views/Experience/AddExperience.cshtml
+++ b/Core_Proje/Views/Experience/AddExperience.cshtml
@@ -4,12 +4,12 @@
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<form method="post">
+
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Deneyim Ekleme</h4>
-            <form class="forms-sample">
+            <form method="post" class="forms-sample">
                 <div class="form-group">
                     <label for="exampleInputName1">Başlık</label>
                     <input type="text" class="form-control" name="Name" placeholder="Deneyim Adı Giriniz">
@@ -34,6 +34,5 @@
         </div>
     </div>
 </div>
- 
-</form>
+
 
