--- a/Core_Proje/Views/Skill/EditSkill.cshtml
+++ b/Core_Proje/Views/Skill/EditSkill.cshtml
@@ -5,22 +5,31 @@
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Yetenek Güncelleme Sayfası</h3>
-</div>
-<br />
 
-<form method="post">
-    @Html.HiddenFor(model => model.SkillId) <!-- ID değeri gizli alan olarak eklenir -->
-    <div class="form-group">
-        <label>Yetenek Adı</label>
-        <input type="text" name="Title" class="form-control" value="@Model.Title" />
+
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Yetenek Güncelleme</h4>
+            <form class="forms-sample" method="post">
+
+
+                @Html.HiddenFor(model => model.SkillId)
+                <div class="form-group">
+                    <label for="exampleInputName1">Başlık</label>
+                    <input type="text" name="Title" class="form-control" value="@Model.Title" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Tarih</label>
+                    <input type="text" name="Value" class="form-control" value="@Model.Value">
+                </div>
+                
+                
+
+                <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
+                <button href="/Skill" class="btn btn-dark">İptal</button>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label>İlerleme</label>
-        <input type="text" name="Value" class="form-control" value="@Model.Value">
-    </div>
-    <button type="submit" class="btn btn-success">Güncelle</button>
-    <a href="/Skill" class="btn btn-youtube">İptal</a>
-</form>
+</div>
 
