yetenek ekleme sayfasi uyarlandi

--- a/Core_Proje/Views/Skill/AddSkill.cshtml
+++ b/Core_Proje/Views/Skill/AddSkill.cshtml
@@ -20,11 +20,12 @@
                 <div class="form-group">
                     <label for="exampleInputEmail3">İlerleme (%)</label>
                     <input type="text" class="form-control" name="Value" placeholder="Örn. 65">
-                </div>                              
+                </div>
 
                 <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
-                <button href="/Skill" class="btn btn-dark">İptal</button>
+                <a   href="/Skill" class="btn btn-dark">İptal</a>
             </form>
+          
         </div>
     </div>
 </div>
