--- a/Core_Proje/Views/Skill/EditSkill.cshtml
+++ b/Core_Proje/Views/Skill/EditSkill.cshtml
@@ -27,7 +27,7 @@
                 
 
                 <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <button href="/Skill" class="btn btn-dark">İptal</button>
+                <a href="/Skill" class="btn btn-dark">İptal</a>
             </form>
         </div>
     </div>
