--- a/Core_Proje/Views/Experience/AddExperience.cshtml
+++ b/Core_Proje/Views/Experience/AddExperience.cshtml
@@ -29,7 +29,7 @@
                 </div>        
                 
                 <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
-                <button href="/Experience" class="btn btn-dark">İptal</button>
+                <a href="/Experience" class="btn btn-dark">İptal</a>
             </form>
         </div>
     </div>
