--- a/Core_Proje/Views/Experience/EditExperience.cshtml
+++ b/Core_Proje/Views/Experience/EditExperience.cshtml
@@ -33,7 +33,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <button href="/Experience" class="btn btn-dark">İptal</button>
+                <a href="/Experience" class="btn btn-dark">İptal</a>
             </form>
         </div>
     </div>
