--- a/Core_Proje/Views/Skill/Index.cshtml
+++ b/Core_Proje/Views/Skill/Index.cshtml
@@ -8,48 +8,44 @@
 
 
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Yetenekler</h3>
-    <a href="/Skill/AddSkill" class="btn btn-success">Yetenek Ekle</a>
-</div>
-<!-- Light table -->
-<div class="table-responsive">
-    <table class="table align-items-center table-flush">
-        <thead class="thead-light">
-            <tr>
-                <th scope="col" class="sort" data-sort="name">#</th>
-                <th scope="col" class="sort" data-sort="budget">Başlık</th>
-                <th scope="col" class="sort" data-sort="status">İlerleme</th>
-                <th scope="col"></th>
-                <th scope="col" class="sort" data-sort="completion"></th>
-                
-            </tr>
-        </thead>
-        <tbody class="list">
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @item.SkillId
-                    </td>
-                    <td class="budget">
-                        @item.Title
-                    </td>
-                    <td>
-                        <div class="d-flex align-items-center">
-                            <span class="completion mr-2">@item.Value%</span>
-                            <div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="@item.Value" aria-valuemin="0" aria-valuemax="100" style="width: @item.Value%"></div>
-                                </div>
-                            </div>
-                        </div>
-                    <td> <a href="/Skill/DeleteSkill/@item.SkillId" class="btn btn-youtube">Sil</a></td>
-                    <td> <a href="/Skill/EditSkill/@item.SkillId" class="btn btn-info">Güncelle</a></td>
-                </tr>
-            }
-        </tbody>
-    </table>
 
+
+
+
+<div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body d-flex justify-content-between align-items-center">
+            <h4 class="card-title mb-0">Yetenekler</h4>
+            <a href="/Skill/AddSkill" class="btn btn-success">Yetenek Ekle</a>
+        </div>
+
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Başlık</th>
+                        <th>İlerleme</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+
+
+                        <tr>
+
+                            <td>@item.Title</td>
+                            <td>@item.Value%</td>
+                            <td><a href="/Skill/DeleteSkill/@item.SkillId" class="btn btn-danger">Sil</a></td>
+                            <td><a href="/Skill/EditSkill/@item.SkillId" class="btn btn-warning">Güncelle</a></td>
+                        </tr>
+
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
 
